# correlaid-comm-workshop

./: README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
models/mart/: customers.sql  orders.sql  schema.yml
