[tool.poetry]
name = "correlaid-comm-workshop"
version = "0.1.0"
description = ""
authors = ["Leonard Mandtler <leonard.mandtler@bertelsmann-stiftung.de>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.3.0"
dbt-duckdb = "^1.3.1"
duckcli = "^0.2.1"
sqlfluff = "~=1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
